[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/secondary/showing_secrets/showing_secrets.gd" type="Script" id=1]

[node name="ShowingSecrets" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="SecretPic" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="DelaySecretPic" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
bus = "Sound"

[connection signal="timeout" from="DelaySecretPic" to="." method="_on_DelaySecretPic_timeout"]
